<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="141dp"
    tools:layout_editor_absoluteY="52dp">
<!--    title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/arabic_arihna"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
<!--                tes slider-->
<!--                <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                    android:id="@+id/sliderTest"-->
<!--                    android:background="@drawable/bg_slider"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent">-->

<!--                    <androidx.viewpager.widget.ViewPager-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="245dp"-->
<!--                        app:layout_constraintHorizontal_bias="0.0"-->
<!--                        app:layout_constraintTop_toTopOf="parent"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        tools:ignore="MissingConstraints"-->
<!--                        />-->
<!--                    -->
<!--                    <com.google.android.material.tabs.TabLayout-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        tools:ignore="MissingConstraints"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"/>-->

<!--                </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--                artikel-->
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_artikel"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="16dp"/>
                <LinearLayout
                    android:id="@+id/slider_dots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal" />

                <!-- fitur  -->
                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_dashboard_menu"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/arabic_arihna"
                        android:text="@string/txt_judul_fitur"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                        <!--                Sunnah Qauliyah Dzikir & Doa Shalat-->
                        <LinearLayout
                            android:id="@+id/ll_dzikir_doa_shalat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/bg_item"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:contentDescription="@string/content_txt_icon_qauliyah_shalat"
                                android:src="@drawable/ic_doa" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="16dp"
                                android:text="@string/txt_sunnah_qauliyah"
                                android:textColor="@color/blue"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_dzikir_setiap_saat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/bg_item"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:contentDescription="@string/content_txt_icon_dzikir_setiap_saat"
                                android:src="@drawable/ic_time" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="16dp"
                                android:text="@string/txt_dzikir_setiap_saat"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_dzikir_pagi_petang"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/bg_item"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:contentDescription="@string/content_txt_icon_dzikir_pagi_petang"
                                android:src="@drawable/ic_pagi_petang" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="16dp"
                                android:text="@string/txt_dzikir_pagi_petang"
                                android:textColor="@color/blue"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ll_dzikir_doa_harian"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/bg_item"
                            android:orientation="horizontal"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:contentDescription="@string/content_txt_icon_dzikir_doa_harian"
                                android:src="@drawable/ic_dzikir" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="16dp"
                                android:text="@string/txt_dzikir_doa_harian"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                />
                        </LinearLayout>


                    </LinearLayout>
                </LinearLayout>


        </androidx.core.widget.NestedScrollView>


</LinearLayout>